# sdl-vulkan-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
shaders/: base.slang
src/: CMakeLists.txt  VkEngine.hpp  glad.c
src/engine/: Engine.cpp  Engine.hpp  GameObject.hpp  Utils.cpp  Utils.hpp  t.cpp
